fix: fix subscribe card alignment

--- a/style/pos-style.scss
+++ b/style/pos-style.scss
@@ -70,7 +70,7 @@ html {
       padding: 0 1rem 0.3rem 1rem;
       grid-template-columns: 1fr;
       grid-auto-rows: max-content;
-      justify-content: center;
+      justify-items: center;
     }
   }
 
@@ -131,6 +131,7 @@ html {
       @media all and (max-width: 576px) {
         margin: 0;
         width: 80%;
+        align-items: center;
       }
 
       .main__card-title {
